[gd_scene load_steps=21 format=3 uid="uid://cvu1yt4it0onx"]

[ext_resource type="Texture2D" uid="uid://c8pumrndo3u1b" path="res://assets/backgrounds/paper_bg.jpg" id="1_1r1m4"]
[ext_resource type="Script" uid="uid://cxon8uwj2anrb" path="res://scripts/minigames_school.gd" id="1_f5ayh"]
[ext_resource type="FontFile" uid="uid://b6rxc2cd3gq82" path="res://assets/fonts/Indie_Flower/IndieFlower-Regular.ttf" id="2_f5ayh"]
[ext_resource type="FontFile" uid="uid://dmwtstgnkr0oc" path="res://assets/fonts/Anton/Anton-Regular.ttf" id="4_bj11i"]
[ext_resource type="Texture2D" uid="uid://ivpscjmkosnj" path="res://icons/buttons/settings.png" id="4_k7hxd"]
[ext_resource type="Script" uid="uid://bnaqpofnsnbg0" path="res://scripts/impostazioni.gd" id="5_k7hxd"]
[ext_resource type="StyleBox" uid="uid://bvaywvbkfe4rj" path="res://assets/styles/hoverButtons.tres" id="7_x0tsx"]
[ext_resource type="Texture2D" uid="uid://ds186uo7s2om3" path="res://icons/buttons/box_not_checked.png" id="8_k7hxd"]
[ext_resource type="Texture2D" uid="uid://c6gdl5iv5pqms" path="res://icons/buttons/check.png" id="9_6iamy"]
[ext_resource type="Script" uid="uid://wsnks8tlquy6" path="res://scripts/pre_minigame.gd" id="11_6iamy"]
[ext_resource type="Texture2D" uid="uid://ckst01muk6v73" path="res://assets/sprites/NPC/Belle.png" id="11_k7hxd"]
[ext_resource type="Texture2D" uid="uid://brvkr7k82xltp" path="res://icons/speech_bubble.png" id="13_u3vfo"]
[ext_resource type="Texture2D" uid="uid://bi62iidwpbxsk" path="res://icons/buttons/completedButton.png" id="13_x0tsx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru0os"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37uvj"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jb13w"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kf2ic"]
bg_color = Color(1, 0.921569, 0.803922, 0.941176)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywbyo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu74a"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_iusyb"]

[node name="Node2D" type="Node2D"]

[node name="minigames_school" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5ayh")

[node name="Background" type="TextureRect" parent="minigames_school"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1r1m4")
expand_mode = 1

[node name="Title" type="RichTextLabel" parent="minigames_school"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -0.5
offset_top = 50.0
offset_right = 0.5
offset_bottom = 295.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_f5ayh")
theme_override_font_sizes/normal_font_size = 165
text = "Minigame School"
scroll_active = false
horizontal_alignment = 1

[node name="impostazioni" type="Button" parent="minigames_school"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 95.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f5ayh")
theme_override_font_sizes/font_size = 84
theme_override_styles/hover = SubResource("StyleBoxFlat_ru0os")
theme_override_styles/pressed = SubResource("StyleBoxFlat_37uvj")
theme_override_styles/normal = SubResource("StyleBoxFlat_jb13w")
icon = ExtResource("4_k7hxd")
icon_alignment = 1
expand_icon = true

[node name="Ritorna Indietro" type="Button" parent="minigames_school"]
layout_mode = 1
offset_left = -62.0
offset_top = 100.0
offset_right = 38.0
offset_bottom = 298.0
rotation = -1.5708
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 14
theme_override_constants/h_separation = 7
theme_override_constants/icon_max_width = 510
theme_override_constants/align_to_largest_stylebox = 32
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("4_bj11i")
theme_override_font_sizes/font_size = 125
text = "â¤´"
flat = true
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="Impostazioni" type="Popup" parent="minigames_school"]
auto_translate_mode = 1
transparent_bg = true
size = Vector2i(1920, 1080)
wrap_controls = false
transparent = true
script = ExtResource("5_k7hxd")

[node name="SfondoTrasparent" type="Panel" parent="minigames_school/Impostazioni"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxImpostazioni" type="Panel" parent="minigames_school/Impostazioni/SfondoTrasparent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 660.0
offset_top = 120.0
offset_right = -660.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kf2ic")

[node name="VBoxContainer" type="VBoxContainer" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VolumeP" type="Panel" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ywbyo")

[node name="RichTextLabel" type="RichTextLabel" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VolumeP"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 14.0
offset_bottom = 114.0
grow_horizontal = 2
theme_override_colors/selection_color = Color(0.962296, 0.733232, 1, 1)
theme_override_constants/table_v_separation = 4
theme_override_constants/text_highlight_h_padding = 6
theme_override_constants/outline_size = 13
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_outline_size = 14
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("2_f5ayh")
theme_override_font_sizes/bold_italics_font_size = 1
theme_override_font_sizes/italics_font_size = 1
theme_override_font_sizes/mono_font_size = 1
theme_override_font_sizes/normal_font_size = 70
theme_override_font_sizes/bold_font_size = 1
text = "VOLUME"
scroll_active = false
tab_size = 1
horizontal_alignment = 1
justification_flags = 128
visible_characters_behavior = 2

[node name="volume" type="HSlider" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VolumeP"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 4.0
offset_right = 200.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
ticks_on_borders = true

[node name="VideoP" type="Panel" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fu74a")

[node name="RichTextLabel2" type="RichTextLabel" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 97.0
offset_right = 1.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_colors/selection_color = Color(0.962296, 0.733232, 1, 1)
theme_override_constants/table_v_separation = 4
theme_override_constants/text_highlight_h_padding = 6
theme_override_constants/outline_size = 13
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_outline_size = 14
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("2_f5ayh")
theme_override_font_sizes/bold_italics_font_size = 1
theme_override_font_sizes/italics_font_size = 1
theme_override_font_sizes/mono_font_size = 1
theme_override_font_sizes/normal_font_size = 70
theme_override_font_sizes/bold_font_size = 1
text = "SCHERMO"
scroll_active = false
tab_size = 1
justification_flags = 128
visible_characters_behavior = 2

[node name="OptionButton" type="OptionButton" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -32.0
offset_right = 290.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("2_f5ayh")
theme_override_font_sizes/font_size = 50

[node name="FullScreen" type="Button" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -84.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_constants/outline_size = 13
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 5000
theme_override_constants/align_to_largest_stylebox = 2
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("2_f5ayh")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = ExtResource("7_x0tsx")
theme_override_styles/pressed = ExtResource("7_x0tsx")
toggle_mode = true
action_mode = 0
text = "SCHERMO INTERO"
icon = ExtResource("8_k7hxd")
flat = true

[node name="CheckFS" type="TextureRect" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP/FullScreen"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = -5.0
offset_right = 93.0
offset_bottom = 82.0
texture = ExtResource("9_6iamy")
expand_mode = 1

[node name="Ritorna Indietro" type="Button" parent="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni"]
layout_mode = 0
offset_left = -36.0
offset_top = 88.0
offset_right = 52.0
offset_bottom = 243.0
rotation = -1.5708
focus_mode = 0
theme_override_constants/outline_size = 14
theme_override_constants/h_separation = 7
theme_override_constants/icon_max_width = 510
theme_override_constants/align_to_largest_stylebox = 32
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("2_f5ayh")
theme_override_font_sizes/font_size = 100
text = "â¤´"
icon = SubResource("CompressedTexture2D_iusyb")
flat = true
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="preMinigame" type="Popup" parent="minigames_school"]
auto_translate_mode = 1
transparent_bg = true
size = Vector2i(1920, 1080)
script = ExtResource("11_6iamy")

[node name="SfondoTrasparent" type="Panel" parent="minigames_school/preMinigame"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Personaggio" type="TextureRect" parent="minigames_school/preMinigame/SfondoTrasparent"]
layout_mode = 0
offset_left = 150.0
offset_top = 1.0
offset_right = 550.0
offset_bottom = 1081.0
texture = ExtResource("11_k7hxd")
expand_mode = 4
stretch_mode = 5

[node name="Speech Bubble Output" type="TextureRect" parent="minigames_school/preMinigame/SfondoTrasparent"]
layout_mode = 0
offset_left = 539.0
offset_top = 39.0
offset_right = 1233.0
offset_bottom = 465.0
texture = ExtResource("13_u3vfo")
expand_mode = 1

[node name="Speech" type="RichTextLabel" parent="minigames_school/preMinigame/SfondoTrasparent/Speech Bubble Output"]
layout_mode = 0
offset_left = 37.0
offset_top = 37.0
offset_right = 656.0
offset_bottom = 332.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -5
theme_override_fonts/normal_font = ExtResource("2_f5ayh")
theme_override_font_sizes/normal_font_size = 45
text = "giao
fiao"
scroll_following = true

[node name="Completed" type="Button" parent="minigames_school/preMinigame/SfondoTrasparent"]
visible = false
layout_mode = 0
offset_left = 1278.0
offset_top = 609.0
offset_right = 1668.0
offset_bottom = 958.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
icon = ExtResource("13_x0tsx")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="minigames_school/impostazioni" to="minigames_school" method="_on_impostazioni_pressed"]
[connection signal="pressed" from="minigames_school/Ritorna Indietro" to="minigames_school" method="_on_ritorna_indietro_pressed"]
[connection signal="item_selected" from="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP/OptionButton" to="minigames_school/Impostazioni" method="_on_option_button_item_selected"]
[connection signal="toggled" from="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP/FullScreen" to="minigames_school/Impostazioni" method="_on_full_screen_toggled"]
[connection signal="pressed" from="minigames_school/Impostazioni/SfondoTrasparent/BoxImpostazioni/Ritorna Indietro" to="minigames_school/Impostazioni" method="_on_ritorna_indietro_pressed"]
[connection signal="pressed" from="minigames_school/preMinigame/SfondoTrasparent/Completed" to="minigames_school/preMinigame" method="_on_completed_pressed"]
